syntax = "proto3";

option csharp_namespace = "GRPCPrimeNumberDecomposerClient";

package primes;

service PrimeNumberService {
    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}

message PrimeNumberDecompositionRequest {
    int32 number = 1;
}

message PrimeNumberDecompositionResponse {
    int32 prime_factor = 1;
}